--- a/spring-context-support/spring-context-support.gradle
+++ b/spring-context-support/spring-context-support.gradle
@@ -4,14 +4,14 @@ dependencies {
 	compile(project(":spring-beans"))
 	compile(project(":spring-context"))
 	compile(project(":spring-core"))
-	optional(project(":spring-jdbc"))  // for Quartz support
-	optional(project(":spring-tx"))  // for Quartz support
+    compile(project(":spring-jdbc"))  // for Quartz support
+    compile(project(":spring-tx"))  // for Quartz support
 	optional("javax.activation:javax.activation-api:1.2.0")
 	optional("javax.mail:javax.mail-api:1.6.2")
 	optional("javax.cache:cache-api:1.1.0")
 	optional("com.github.ben-manes.caffeine:caffeine:2.6.2")
 	optional("net.sf.ehcache:ehcache:2.10.4")
-	optional("org.quartz-scheduler:quartz:2.3.0")
+	compile("org.quartz-scheduler:quartz:2.3.0")
 	optional("org.codehaus.fabric3.api:commonj:1.1.0")
 	optional("org.freemarker:freemarker:${freemarkerVersion}")
 	testCompile(project(":spring-context"))
